// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`NavList > renders a simple list 1`] = `
<div>
  <nav>
    <ul
      class="_ActionList_1qch5_3"
      data-dividers="false"
      data-variant="inset"
    >
      <li
        class="_ActionListItem_1qch5_20"
        data-active="true"
      >
        <a
          aria-current="page"
          aria-labelledby=":r2:--label  "
          class="_ActionListContent_1qch5_282 _Link_u1kmx_1"
          href="/"
          id=":r2:"
          style="--subitem-depth: 0;"
          tabindex="0"
        >
          <span
            class="_Spacer_1qch5_297"
          />
          <span
            class="_ActionListSubContent_1qch5_31"
            data-component="ActionList.Item--DividerContainer"
          >
            <span
              class="_ItemLabel_1qch5_188"
              id=":r2:--label"
            >
              Home
            </span>
            <span
              class="_InactiveWarning_1qch5_236"
            />
          </span>
        </a>
      </li>
      <li
        class="_ActionListItem_1qch5_20"
      >
        <a
          aria-labelledby=":r3:--label  "
          class="_ActionListContent_1qch5_282 _Link_u1kmx_1"
          href="/about"
          id=":r3:"
          style="--subitem-depth: 0;"
          tabindex="0"
        >
          <span
            class="_Spacer_1qch5_297"
          />
          <span
            class="_ActionListSubContent_1qch5_31"
            data-component="ActionList.Item--DividerContainer"
          >
            <span
              class="_ItemLabel_1qch5_188"
              id=":r3:--label"
            >
              About
            </span>
            <span
              class="_InactiveWarning_1qch5_236"
            />
          </span>
        </a>
      </li>
      <li
        class="_ActionListItem_1qch5_20"
      >
        <a
          aria-labelledby=":r4:--label  "
          class="_ActionListContent_1qch5_282 _Link_u1kmx_1"
          href="/contact"
          id=":r4:"
          style="--subitem-depth: 0;"
          tabindex="0"
        >
          <span
            class="_Spacer_1qch5_297"
          />
          <span
            class="_ActionListSubContent_1qch5_31"
            data-component="ActionList.Item--DividerContainer"
          >
            <span
              class="_ItemLabel_1qch5_188"
              id=":r4:--label"
            >
              Contact
            </span>
            <span
              class="_InactiveWarning_1qch5_236"
            />
          </span>
        </a>
      </li>
    </ul>
  </nav>
</div>
`;

exports[`NavList > renders with groups 1`] = `
<div>
  <nav>
    <ul
      class="_ActionList_1qch5_3"
      data-dividers="false"
      data-variant="inset"
    >
      <li
        aria-hidden="true"
        class="_Divider_1qch5_73"
        data-component="ActionList.Divider"
      />
      <li
        class="_Group_1rejt_1"
      >
        <div
          class="_GroupHeadingWrap_1rejt_9"
          data-component="GroupHeadingWrap"
          data-variant="subtle"
        >
          <h3
            class="_GroupHeading_1rejt_7"
            data-component="ActionList.GroupHeading"
            id=":r7:"
          >
            Overview
          </h3>
        </div>
        <ul
          aria-labelledby=":r7:"
          class="_GroupList_1rejt_18"
        >
          <li
            class="_ActionListItem_1qch5_20"
            data-active="true"
          >
            <a
              aria-current="page"
              aria-labelledby=":r8:--label  "
              class="_ActionListContent_1qch5_282 _Link_u1kmx_1"
              href="/getting-started"
              id=":r8:"
              style="--subitem-depth: 0;"
              tabindex="0"
            >
              <span
                class="_Spacer_1qch5_297"
              />
              <span
                class="_ActionListSubContent_1qch5_31"
                data-component="ActionList.Item--DividerContainer"
              >
                <span
                  class="_ItemLabel_1qch5_188"
                  id=":r8:--label"
                >
                  Getting started
                </span>
                <span
                  class="_InactiveWarning_1qch5_236"
                />
              </span>
            </a>
          </li>
        </ul>
      </li>
      <li
        aria-hidden="true"
        class="_Divider_1qch5_73"
        data-component="ActionList.Divider"
      />
      <li
        class="_Group_1rejt_1"
      >
        <div
          class="_GroupHeadingWrap_1rejt_9"
          data-component="GroupHeadingWrap"
          data-variant="subtle"
        >
          <h3
            class="_GroupHeading_1rejt_7"
            data-component="ActionList.GroupHeading"
            id=":r9:"
          >
            Components
          </h3>
        </div>
        <ul
          aria-labelledby=":r9:"
          class="_GroupList_1rejt_18"
        >
          <li
            class="_ActionListItem_1qch5_20"
          >
            <a
              aria-labelledby=":ra:--label  "
              class="_ActionListContent_1qch5_282 _Link_u1kmx_1"
              href="/Avatar"
              id=":ra:"
              style="--subitem-depth: 0;"
              tabindex="0"
            >
              <span
                class="_Spacer_1qch5_297"
              />
              <span
                class="_ActionListSubContent_1qch5_31"
                data-component="ActionList.Item--DividerContainer"
              >
                <span
                  class="_ItemLabel_1qch5_188"
                  id=":ra:--label"
                >
                  Avatar
                </span>
                <span
                  class="_InactiveWarning_1qch5_236"
                />
              </span>
            </a>
          </li>
        </ul>
      </li>
    </ul>
  </nav>
</div>
`;

exports[`NavList.Item with NavList.SubNav > does not have active styles if SubNav contains the current item and is open 1`] = `
<div>
  <nav>
    <ul
      class="_ActionList_1qch5_3"
      data-dividers="false"
      data-variant="inset"
    >
      <li
        class="_ActionListItem_1qch5_20"
        data-has-subitem="true"
      >
        <button
          aria-controls=":r27:"
          aria-expanded="true"
          aria-labelledby=":r26:--label :r26:--trailing-visual "
          class="_ActionListContent_1qch5_282"
          id=":r26:"
          style="--subitem-depth: 0;"
          tabindex="0"
          type="button"
        >
          <span
            class="_Spacer_1qch5_297"
          />
          <span
            class="_ActionListSubContent_1qch5_31"
            data-component="ActionList.Item--DividerContainer"
          >
            <span
              class="_ItemLabel_1qch5_188"
              id=":r26:--label"
            >
              Item
            </span>
            <span
              class="_TrailingVisual_1qch5_158 _VisualWrap_1qch5_614"
              id=":r26:--trailing-visual"
            >
              <svg
                aria-hidden="true"
                class="octicon octicon-chevron-down _ExpandIcon_1qch5_484"
                display="inline-block"
                fill="currentColor"
                focusable="false"
                height="16"
                overflow="visible"
                style="vertical-align: text-bottom;"
                viewBox="0 0 16 16"
                width="16"
              >
                <path
                  d="M12.78 5.22a.749.749 0 0 1 0 1.06l-4.25 4.25a.749.749 0 0 1-1.06 0L3.22 6.28a.749.749 0 1 1 1.06-1.06L8 8.939l3.72-3.719a.749.749 0 0 1 1.06 0Z"
                />
              </svg>
            </span>
            <span
              class="_InactiveWarning_1qch5_236"
            />
          </span>
        </button>
        <ul
          aria-labelledby=":r26:"
          class="_SubGroup_1qch5_494"
          id=":r27:"
        >
          <li
            class="_ActionListItem_1qch5_20"
            data-active="true"
          >
            <a
              aria-current="page"
              aria-labelledby=":r29:--label  "
              class="_ActionListContent_1qch5_282 _Link_u1kmx_1"
              href="#"
              id=":r29:"
              style="--subitem-depth: 1;"
              tabindex="0"
            >
              <span
                class="_Spacer_1qch5_297"
              />
              <span
                class="_ActionListSubContent_1qch5_31"
                data-component="ActionList.Item--DividerContainer"
              >
                <span
                  class="_ItemLabel_1qch5_188"
                  id=":r29:--label"
                >
                  Sub Item
                </span>
                <span
                  class="_InactiveWarning_1qch5_236"
                />
              </span>
            </a>
          </li>
        </ul>
      </li>
    </ul>
  </nav>
</div>
`;

exports[`NavList.Item with NavList.SubNav > has active styles if SubNav contains the current item and is closed 1`] = `
<div>
  <nav>
    <ul
      class="_ActionList_1qch5_3"
      data-dividers="false"
      data-variant="inset"
    >
      <li
        class="_ActionListItem_1qch5_20"
        data-active="true"
        data-has-subitem="true"
      >
        <button
          aria-controls=":r21:"
          aria-expanded="false"
          aria-labelledby=":r20:--label :r20:--trailing-visual "
          class="_ActionListContent_1qch5_282"
          id=":r20:"
          style="--subitem-depth: 0;"
          tabindex="0"
          type="button"
        >
          <span
            class="_Spacer_1qch5_297"
          />
          <span
            class="_ActionListSubContent_1qch5_31"
            data-component="ActionList.Item--DividerContainer"
          >
            <span
              class="_ItemLabel_1qch5_188"
              id=":r20:--label"
            >
              Item
            </span>
            <span
              class="_TrailingVisual_1qch5_158 _VisualWrap_1qch5_614"
              id=":r20:--trailing-visual"
            >
              <svg
                aria-hidden="true"
                class="octicon octicon-chevron-down _ExpandIcon_1qch5_484"
                display="inline-block"
                fill="currentColor"
                focusable="false"
                height="16"
                overflow="visible"
                style="vertical-align: text-bottom;"
                viewBox="0 0 16 16"
                width="16"
              >
                <path
                  d="M12.78 5.22a.749.749 0 0 1 0 1.06l-4.25 4.25a.749.749 0 0 1-1.06 0L3.22 6.28a.749.749 0 1 1 1.06-1.06L8 8.939l3.72-3.719a.749.749 0 0 1 1.06 0Z"
                />
              </svg>
            </span>
            <span
              class="_InactiveWarning_1qch5_236"
            />
          </span>
        </button>
        <ul
          aria-labelledby=":r20:"
          class="_SubGroup_1qch5_494"
          id=":r21:"
        >
          <li
            class="_ActionListItem_1qch5_20"
            data-active="true"
          >
            <a
              aria-current="page"
              aria-labelledby=":r23:--label  "
              class="_ActionListContent_1qch5_282 _Link_u1kmx_1"
              href="#"
              id=":r23:"
              style="--subitem-depth: 1;"
              tabindex="0"
            >
              <span
                class="_Spacer_1qch5_297"
              />
              <span
                class="_ActionListSubContent_1qch5_31"
                data-component="ActionList.Item--DividerContainer"
              >
                <span
                  class="_ItemLabel_1qch5_188"
                  id=":r23:--label"
                >
                  Sub Item
                </span>
                <span
                  class="_InactiveWarning_1qch5_236"
                />
              </span>
            </a>
          </li>
        </ul>
      </li>
    </ul>
  </nav>
</div>
`;
